<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">夜雨备份</string>
    <string name="main_title">短信</string>
    <string name="action_settings">Settings</string>
    <string name="action_import">导入</string>
    <string name="action_export">导出</string>
    <string name="action_backup">同步</string>
    <string name="title_activity_export">Export</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_view">查看</string>
    <string name="title_activity_sms_list">查看短信</string>
    <string name="title_activity_conversation_detail">Conversation</string>
    <string name="tip_sync_successfully">备份成功</string>
    <string name="tip_export_failure">导出失败</string>

</resources>
