<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5pt"
        android:paddingTop="5pt"
        android:text="@string/main_title"
        android:textSize="@dimen/title_lvl_1"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:onClick="onView"
        android:text="@string/action_view"
        android:background="@drawable/common_button_background"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:onClick="onSync"
        android:text="@string/action_backup"
        android:background="@drawable/common_button_background"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:onClick="onExportSms"
        android:text="@string/action_export"
        android:background="@drawable/common_button_background"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:onClick="onReadSMS"
        android:text="@string/action_import"
        android:background="@drawable/common_button_background"/>

</LinearLayout>
